主页增加上传文件入口

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,8 @@
 <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">欢迎来到主页！</a>
+            <a class="navbar-brand">欢迎来到主页！</a>
+            <a class="navbar-brand" href="/upload">上传文件</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
