--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
 </body>
 </html>
 
-<script src="../public/javascripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="/javascripts/jquery-2.2.0.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
     String.prototype.format = function (args) {
