--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,19 +1,37 @@
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand">欢迎来到主页！</a>
-            <a class="navbar-brand" href="/upload">上传文件</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title>Blog</title>
+<link rel="stylesheet" href="/stylesheets/style.css">
+</head>
+<body>
 
-                <% if (locals.account) { %>
-                <li><a href="#">
-                    <%= account %>
-                </a></li>
-                <li><a href="/logout">安全退出</a></li>
-                <% } %>
-            </ul>
-        </div>
-    </div>
-</div>
+<header>
+<h1><%= title %></h1>
+</header>
+
+<nav>
+<span><a title="主页" href="/">home</a></span>
+<span><a title="存档" href="/archive">archive</a></span>
+<span><a title="标签" href="/tags">tags</a></span>
+<span><a title="友情链接" href="/links">links</a></span>
+<% if (user) { %>
+  <span><a title="上传" href="/upload">upload</a></span>
+  <span><a title="发表" href="/post">post</a></span>
+  <span><a title="登出" href="/logout">logout</a></span>
+<% } else { %>
+  <span><a title="登录" href="/login">login</a></span>
+  <span><a title="注册" href="/reg">register</a></span>
+<% } %>
+<span><form action="/search" method="GET"><input type="text" name="keyword" placeholder="SEARCH" class="search" /></form></span>
+</nav>
+
+<article>
+
+<% if (success) { %>
+  <div><%= success %></div>
+<% } %>
+<% if (error) { %>
+  <div><%= error %> </div>
+<% } %>
