--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,3 +23,5 @@ article a:hover{color:#333;text-decoration:underline;}
 .search{border:0;width:6em;text-align:center;font-size:1em;margin:0.5em 0;}
 .l_head{float:left;margin-left:-4em;box-shadow:0px 1px 4px #888;}
 .r_head{float:right;margin-top:-2.5em;box-shadow:0px 1px 4px #888;}
+th {text-align: right;}
+.tips-error { color: red; text-align: left;}
